--- a/index.css
+++ b/index.css
@@ -10,11 +10,16 @@ div {
     background-color: pink;
 }
 .Yo {
-    width: 99.7%;
+    width: 100%;
 }
 .Gustos {
-    margin-top: 4px;
+    margin-top: 2px;
     margin-bottom: 4px;
     width: 100%;
     height: 230px;
+}
+img {
+    border-radius: 50%;
+    height: 20vw;
+    margin-top: 4px;
 }
