--- a/index.css
+++ b/index.css
@@ -28,3 +28,10 @@ img {
     height: 20vw;
     margin-top: 4px;
 }
+.nada {
+    border: 0px;
+    width: 100%;
+}
+.mas {
+    color: rgb(235, 15, 52);
+}
